--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.3",
     "multer-uploader": "^1.0.9",
+    "node-fetch": "^3.3.0",
     "nodemailer": "^6.8.0",
     "pug": "^3.0.2",
     "redis": "^4.5.1",
